Fix spacing on furniture item tags

--- a/frontend/src/components/VSRForm/FurnitureItemSelection/styles.module.css
+++ b/frontend/src/components/VSRForm/FurnitureItemSelection/styles.module.css
@@ -84,6 +84,10 @@
     brightness(103%) contrast(103%);
 }
 
+.quantityText {
+  margin: 0 6px;
+}
+
 /* tablet version */
 @media screen and (max-width: 850px) {
   .chip {
